css/victoria.css
/*
* Victoria (HTML) V1.0
* Copyright 2014, Limitless LLC
* www.limitless.company
*/

*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}


/* Table of Content
==================================================
	#.header
	#Home
	#About
	#Team
	#Quotes
	#Services
	#Projects
	#Blog
	#Article
	#Contact
	#Footer
	#Not Found */



	.header, .home .content, .about .story, .team .member, .quotes .slider, .services .service, .projects .project, .contact .form, .contact .info {
		opacity: 0;
	}


/* #.header
================================================== */
	
	.header {
		background-color: rgba(17, 17, 17, 1);
		height: 80px;
		position: fixed;
		text-align: center;
		top: 0px;
		width: 100%;
		z-index: 1000;
	}

	.header .logo {
		background-color: transparent;
		background-image: url(../img/misc/header-logo.png);
		background-position: left center;
		background-repeat: no-repeat;
		background-size: auto;
		cursor: pointer;
		height: 80px;
		opacity: 0.5;
		-webkit-transition: all .3s ease;
		-moz-transition: all .3s ease;
		-ms-transition: all .3s ease;
		-o-transition: all .3s ease;
		transition: all .3s ease;
	}

	.header .logo:hover {
		opacity: 1;
	}

	.header .menu {
		background-color: transparent;
		background-image: url(../img/misc/mobile-navigation.png);
		background-position: right center;
		background-repeat: no-repeat;
		background-size: 20px 16px;
		border: none;
		cursor: pointer;
		display: none;
		height: 16px;
		opacity: 0.5;
		width: 20px;
		-webkit-transition: all .3s ease;
		-moz-transition: all .3s ease;
		-ms-transition: all .3s ease;
		-o-transition: all .3s ease;
		transition: all .3s ease;
	}

	.header .navigation {
		display: block;
		margin-top: 29px;
		text-align: right;
	}

	.header .navigation li {
		color: #888888;
		cursor: pointer;
		display: inline-block;
		font-family: "Montserrat";
		font-size: 15px;
		font-weight: 400;
		margin-bottom: 0px;
		margin-right: 35px;
		text-transform: uppercase;
		-webkit-transition: all .3s ease;
		-moz-transition: all .3s ease;
		-ms-transition: all .3s ease;
		-o-transition: all .3s ease;
		transition: all .3s ease;
	}

	.header .navigation li:last-child {
		margin-left: 0px;
		margin-right: 0px;
	}

	.header .navigation li:hover, .header .navigation li.active {
		color: #ffffff;
	}

	.header .navigation li ul {
		background-color: #000000;
		background-image: url(../img/misc/menu-item-active.png);
		background-position: center 5px;
		background-repeat: no-repeat;
		background-size: 5px 5px;
		display: none;
		margin: 0px 0px 0px -20px;
		padding: 27px 20px 5px;
		position: absolute;
		text-align: left;
		z-index: 9999;
	}

	.header .navigation li ul li {
		display: block;
		margin-bottom: 10px;
	}


/* #Home
================================================== */

	.home {

	}

	.home .image {
		background-image: url(../img/backgrounds/home.jpg);
		background-attachment: fixed;
		background-color: #111111;
		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
	}

	.home .video {
		overflow: hidden;
	}

	.home video {
		background-color: #111111;
	}

	.home li {
		margin-bottom: 0px;
	}

	.home .slide {
		background-color: #111111;
		background-position: center center;
		background-repeat: no-repeat;
		background-size: cover;
		position: relative;
	}

	.home .overlay, .home .content {
		bottom: 0px;
		left: 0px;
		padding-top: 0px !important;
		position: absolute !important;
		right: 0px;
		top: 0px;
	}

	.home .overlay {
		/*background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 100%);
		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,1)), color-stop(100%,rgba(0,0,0,0.5)));
		background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.5) 100%);
		background: -o-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.5) 100%);
		background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0.5) 100%);
		background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0.5) 100%);
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#80000000',GradientType=0 );*/
	}

	.home .title {
		color: #ffffff;
		font-size: 72px;
		font-weight: 700;
		letter-spacing: 1.5px;
		line-height: 80px;
		text-transform: uppercase;
	}

	.home .title:after {
		background-color: #ffffff;
		content: " ";
		display: inline-block;
		height: 1px;
		margin: 30px auto;
		width: 650px;
	}

	.home .subtitle {
		color: #ffffff;
		font-size: 14px;
		font-weight: 400;
		letter-spacing: 1.5px;
		text-transform: uppercase;
	}
        
        .home .subtitle.big {
		font-size: 32px;
	}


	.home .devider {
		background-color: #ffffff;
		height: 4px;
		margin-bottom: 50px;
		width: 100px;
	}

	.home .scroll {
		background-image: url(../img/misc/home-start.png);
		background-position: center top;
		background-repeat: no-repeat;
		background-size: 14px 13px;
		bottom: 40px;
		color: #ffffff;
		cursor: pointer;
		font-size: 10px;
		left: 0px;
		margin: 0px auto;
		opacity: 0.5;
		padding-top: 20px;
		position: absolute;
		right: 0px;
		text-align: center;
		text-transform: uppercase;
		width: 100px;
		-webkit-transition: all .3s ease;
		-moz-transition: all .3s ease;
		-ms-transition: all .3s ease;
		-o-transition: all .3s ease;
		transition: all .3s ease;
	}

	.home .scroll:hover {
		opacity: 1;
	}

	.home .flex-control-nav {
		right: 51px;
		width: 15px;
		z-index: 9999;
	}

	.home .flex-control-nav li {
		display: block;
		margin-bottom: 15px;
	}

	.home .flex-control-paging li a {
		background: rgba(255,255,255,0.5);
		height: 5px;
		width: 5px;
	}

	.home .flex-control-paging li a.flex-active {
		background: rgba(255,255,255,1);
	}

	.home .flex-control-nav li:last-child {
		margin-bottom: 0px;
	}
/* ... */

